--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,11 @@ pickle-email-*.html
 /.bundle
 /vendor/bundle
 
-# ignore node modules
+# Ignore node modules
 /node_modules
 
 # Ignore all environment files (except templates).
-/.env*
+.env*
 !/.env*.erb
 
 # Ignore all logfiles and tempfiles.
@@ -28,48 +28,48 @@ pickle-email-*.html
 !/log/.keep
 !/tmp/.keep
 
-# TODO Comment out this rule if you are OK with secrets being uploaded to the repo
+# Secrets and keys
 config/initializers/secret_token.rb
 config/master.key
+config/credentials.yml.enc
+config/credentials/*.key
 
 # Only include if you have production secrets in this file, which is no longer a Rails default
 # config/secrets.yml
 
 # dotenv, dotenv-rails
-# TODO Comment out these rules if environment variables can be committed
 .env
 .env*.local
 
-## Environment normalization:
+# Environment normalization
 /.bundle
 /vendor/bundle
 
-# these should all be checked in to normalize the environment:
-# Gemfile.lock, .ruby-version, .ruby-gemset
+# Normalize the environment:
+/Gemfile.lock
+.ruby-version
+.ruby-gemset
 
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+# Ignore RVM configurations
 .rvmrc
 
-# if using bower-rails ignore default bower_components path bower.json files
+# Bower-related files
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
 
-# Ignore pow environment settings
+# Ignore Pow environment settings
 .powenv
 
-# Ignore Byebug command history file.
+# Ignore Byebug command history file
 .byebug_history
 
-# Ignore node_modules
-node_modules/
-
-# Ignore precompiled javascript packs
+# Ignore precompiled JavaScript packs
 /public/packs
 /public/packs-test
 /public/assets
 
-# Ignore yarn files
+# Yarn files
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
@@ -79,5 +79,6 @@ yarn-debug.log*
 !/storage/.keep
 /public/uploads
 
-# Ignore database.yml
+# Ignore database configuration
 config/database.yml
+config/database.yml.example
